Fixed an issue where I had an hardcoded style.

--- a/landing.less
+++ b/landing.less
@@ -69,7 +69,7 @@
 		}
 		
 		// The 'main' call to action element
-		a.install,
+		a.main, a.call-to-action,
 		// Hovered and active elements have the same style.
 		a:hover, a:active {
 			background-color:@landing-menu-active;
