Made "readbility length" configurable.

--- a/base.less
+++ b/base.less
@@ -220,8 +220,10 @@ body #content {
 	margin: @page-margins;
 	padding-top:1em;
 }
+#content ul ,
+#content ol ,
 #content p {
-	max-width:42em;
+	max-width:@page-readbility-max-width;
 	width:auto;
 }
 
