--- a/variables.less
+++ b/variables.less
@@ -35,3 +35,6 @@
 // Media queries related.
 @width-phone: 600px;
 @contents-width: @page-width - (@page-margins * 2);
+
+// Typographic needs
+@page-readbility-max-width: 42em;
